Update java-native-image-exploring.md